--- a/website/templates/resultados.html
+++ b/website/templates/resultados.html
@@ -8,8 +8,8 @@
 <table>
 
     <tr>
-        <td align="left"><label>Paga impuestos:</label></td>
-        <td align="right">{{res[12]}}</td>
+        <td align="left"><label><b>Paga impuestos:</b></label></td>
+        <td align="right"><b>{{res[12]}}</b></td>
     </tr>
     <tr>
         <td align="left"><label>Impuestos enero:</label></td>
