--- a/website/templates/resultados.html
+++ b/website/templates/resultados.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <h1>Proyección anual</h1>
+<img src="https://proludica.com/wp-content/uploads/2019/10/SUNAT.png" style="margin:50px 0px 50px 0px; width:25%;"><br>
 
 <table>
 
